refactor: moved types to shared dir
refactor: moved types to shared dir

refactor moved types to shared dir
